# summit2026

./: .gitignore  beet.yaml  link.sh  main.py  pyproject.toml
model_resolver_summit/: __init__.py  code_style.py  compress.py  plugin.py
simpledrawer/assets/model_resolver_summit/font/: pages.json
simpledrawer/assets/model_resolver_summit/items/: compacting.json  guide.json  logo_simpledrawer.json  normal.json
simpledrawer/assets/model_resolver_summit/lang/: en_us.json  fr_fr.json
simpledrawer/assets/model_resolver_summit/models/item/: guide.json
simpledrawer/assets/model_resolver_summit/models/logo_simpledrawer/: 0.json  1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  23.json  24.json  25.json  26.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  35.json  36.json  37.json  38.json  39.json  4.json  40.json  41.json  5.json  6.json  7.json  (+2 more)
simpledrawer/assets/simpledrawer/font/: pages.json
simpledrawer/assets/simpledrawer/items/: compacting.json  guide.json  logo.json  normal.json
simpledrawer/assets/simpledrawer/lang/: en_us.json  fr_fr.json
simpledrawer/assets/simpledrawer/models/item/: guide.json
simpledrawer/data/model_resolver_summit/loot_tables/: guide.json
simpledrawer/data/simpledrawer/loot_tables/: guide.json
src/: balloon.bbmodel  definition.json  rp.bbmodel
src/assets/model_resolver_summit/items/: balloon.json  beet.json  logo.json  opengl.json  respawn_anchor.json  screen.json  sky1.json  structure_sticker.json
src/assets/model_resolver_summit/models/: screen.json
src/data/model_resolver_summit/advancement/: simpledrawer_sticker.json
src/data/model_resolver_summit/structure/: 1.nbt  2.nbt  3.nbt  4.nbt
(+127 files in other folders)
