[project]
name = "model_resolver_summit"
version = "0.1.0"
description = "model_resolver_summit datapack project using weld deps"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beet>=0.113.0b10",
    "bolt>=0.50.0b5",
    "mecha>=0.102.0b2",
    "simple-item-plugin>=0.9.1",
    "weld-deps>=0.15.0",
    "requests>=2.32.0",
    "pyyaml>=6.0.0",
    "model-resolver>=1.15.2",
    "pygments>=2.20.0",
    "black>=26.3.1",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.0",
]

[tool.uv]
override-dependencies = ["click>=8.3.1"]


[tool.semantic_release]
major_on_zero = false
build_command = '''
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
         -s meta.weld_deps.enabled=false \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp"
    beet -s data_pack.zipped=true \
         -s resource_pack.zipped=true \
            -s meta.weld_deps.enabled=true \
         -s data_pack.name="{{ project_id }}_{{ project_version }}_dp_bundled" \
         -s resource_pack.name="{{ project_id }}_{{ project_version }}_rp_bundled"
'''
dist_path = "build"
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "beet.yaml:version",
]
version_source = "commit"

remove_dist = false
tag_format = "v{version}"

[tool.semantic_release.publish]
dist_glob_patterns = ["build/*.zip"]
upload_to_vcs_release = true


[tool.uv.sources]
simple-item-plugin = { path = "../simple_item_plugin", editable = true }
model-resolver = { path = "../model_resolver", editable = true }
# weld-deps = { path = "../weld-deps", editable = true }
